updates + railway config

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "hanover-perplexity",
+  "name": "perplexiclone",
   "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite dev --port 3000",
     "build": "vite build",
     "serve": "vite preview",
+    "start": "node server.js",
     "test": "vitest run",
     "lint": "eslint",
     "format": "prettier",
@@ -13,6 +14,10 @@
   },
   "dependencies": {
     "@mozilla/readability": "^0.6.0",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-devtools": "^0.7.0",
     "@tanstack/react-router": "^1.132.0",
@@ -24,6 +29,8 @@
     "better-sqlite3": "^12.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "drizzle-kit": "^0.31.6",
+    "drizzle-orm": "^0.44.7",
     "lucide-react": "^0.544.0",
     "openai": "^6.7.0",
     "react": "^19.2.0",
@@ -32,6 +39,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.0.6",
     "uuid": "^13.0.0",
+    "vaul": "^1.1.2",
     "vite-tsconfig-paths": "^5.1.4",
     "zod": "^4.1.12"
   },
@@ -45,6 +53,7 @@
     "@vitejs/plugin-react": "^5.0.4",
     "jsdom": "^27.0.0",
     "prettier": "^3.5.3",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.7.2",
     "vite": "^7.1.7",
     "vitest": "^3.0.5",
