--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "clsx": "^2.1.1",
     "drizzle-kit": "^0.31.6",
     "drizzle-orm": "^0.44.7",
+    "jsdom": "^26.1.0",
     "lucide-react": "^0.544.0",
     "openai": "^6.7.0",
     "react": "^19.2.0",
@@ -55,12 +56,14 @@
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "@vitejs/plugin-react": "^5.0.4",
-    "jsdom": "^27.0.0",
     "prettier": "^3.5.3",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.7.2",
     "vite": "^7.1.7",
     "vitest": "^3.0.5",
     "web-vitals": "^5.1.0"
+  },
+  "overrides": {
+    "parse5": "^7.1.2"
   }
 }
